# NEMO-online-training

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  run_tests.py
NEMO_online_training/: admin.py  api.py  apps.py  customization.py  fields.py  forms.py  models.py  policy.py  training_actions.py  urls.py  utilities.py
NEMO_online_training/migrations/: 0001_initial.py
NEMO_online_training/static/NEMO_online_training/: nemo_online_training.css
NEMO_online_training/templates/NEMO_online_training/: base.html  error_message.html
NEMO_online_training/templates/NEMO_online_training/public/: invalid_training_link.html  new_link_email_confirmation.html  user_training.html
NEMO_online_training/templates/NEMO_online_training/user_trainings/: user_search.html  user_trainings.html
NEMO_online_training/templates/customizations/: customizations_online_training.html
NEMO_online_training/tests/: test_online_training.py  test_settings.py
NEMO_online_training/views/: online_training.py
resources/emails/: online_training_send_new_link_email.html
