[project]
name = "NEMO-online-training"
version = "0.9.2"
description = "Plugin for NEMO to allow users to complete online training even before they have a NEMO account"
keywords = ["NEMO"]
readme = "README.md"
authors = [{name = "Center for Nanoscale Science and Technology", email = "CNSTapplications@nist.gov"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "django",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/usnistgov/NEMO-online-training"
Changelog = "https://github.com/usnistgov/NEMO-online-training/releases"
Issues = "https://github.com/usnistgov/NEMO-online-training/issues"

[project.optional-dependencies]
NEMO-CE = ["NEMO-CE>=7.4.0",]
NEMO = ["NEMO>=7.4.0",]
dev-tools = ["pre-commit", "djlint", "black"]

[tool.setuptools.packages.find]
include = ["NEMO_online_training*"]

[tool.setuptools.package-data]
NEMO_online_training = ["static/**/*", "templates/**/*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.djlint]
profile = "django"
max_attribute_length=100
max_line_length=120
ignore = "H031"